homeworks/devkub/kuber-05/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-app
  ports:
  - name: nginx-tcp-port
    protocol: TCP
    port: 9001
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend-app
  ports:
  - name: mt-tcp-port
    protocol: TCP
    port: 9002
    targetPort: 8080
---
