homeworks/devkub/kuber-05/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx # strangely, rm this make multiple paths working
    nginx.ingress.kubernetes.io/rewrite-target: / # strangely, rm this make multiple paths working
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 9001
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 9002
